fix: improve light theme contrast

--- a/src/css/base/_utilities.css
+++ b/src/css/base/_utilities.css
@@ -4,7 +4,7 @@
 }
 
 .text-muted {
-  color: #999;
+  color: var(--theme-muted-color);
 }
 
 .text-warning {
