--- a/src/css/components/_header.css
+++ b/src/css/components/_header.css
@@ -120,7 +120,7 @@
 
 .search-label {
   left: 0;
-  color: #999;
+  color: var(--theme-muted-color);
   pointer-events: none;
 }
 
